--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "wildlife",
   "version": "2.0.1",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-jasmine": "~0.5.1",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-contrib-connect": "~0.4.1",
-    "intern": "~1.2.1"
+    "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jasmine": "^1.0.3",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^18.1.0",
+    "intern": "^3.2.0",
+    "load-grunt-tasks": "^3.5.0"
   }
 }
