--- a/.eslintrc
+++ b/.eslintrc
@@ -3,9 +3,14 @@
         "browser": true,
         "jasmine": true,
         "amd": true,
-        "node": true
+        "node": true,
+        "jquery": true
     },
-    "globals": {},
+    "globals": {
+        "AGRC": true,
+        "L": true,
+        "dojo": true
+    },
     "rules": {
         "no-bitwise": 2,
         "curly": [
