--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wildlife",
-  "version": "2.0.1",
+  "name": "electrofishing",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
