--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .grunt/
 dist/
 node_modules/
+src/bootstrap
+src/bootstrap-combobox
+src/dijit
+src/dojo
+src/dojox
+src/jquery
+src/proj4js
+src/typeahead
+src/util
