--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,16 @@
   "license": "MIT",
   "homepage": "https://github.com/agrc/electrofishing",
   "moduleType": [],
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bootstrap": "~3.3.6",
+    "dojo": "~1.11.2",
+    "dijit": "~1.11.2",
+    "leaflet": "~0.7.7",
+    "bootstrap-combobox": "~1.1.7",
+    "bootstrap3-typeahead": "~4.0.1",
+    "proj4": "~2.3.14",
+    "util": "dojo-util#~1.11.2",
+    "dgrid": "~1.1.0"
+  }
 }
