--- a/src/app/package.json
+++ b/src/app/package.json
@@ -2,7 +2,7 @@
     "name": "app",
     "version": "1.0.0",
     "main": "main",
-    "description": "AGRC Boilerplate",
-    "homepage": "https://github.com/agrc/AGRCJavaScriptProjectBoilerPlate",
+    "description": "electrofishing",
+    "homepage": "https://github.com/agrc/electrofishing",
     "dojoBuild": "app.profile.js"
 }
