more deps and dep paths
agrc, esri-leaflet, ijit, & proj4leaflet

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,30 @@
 .grunt/
 dist/
 node_modules/
+src/agrc/
 src/bootstrap
 src/bootstrap-combobox
 src/bootstrap3-typeahead
+src/components-jasmine/
 src/dgrid
 src/dijit
 src/dojo
 src/dojo-themes
 src/dojox
 src/dstore
+src/esri-leaflet/
+src/favico.js/
+src/ijit/
+src/jasmine-favicon-reporter/
+src/jasmine-jsreporter/
 src/jquery
+src/ladda-bootstrap/
 src/leaflet
+src/mustache/
 src/proj4
+src/Proj4Leaflet/
+src/put-selector/
+src/spin.js/
+src/spinjs/
 src/util
+src/xstyle/
