--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,14 @@
     "bootstrap3-typeahead": "~4.0.1",
     "proj4": "~2.3.14",
     "util": "dojo-util#~1.11.2",
-    "dgrid": "~1.1.0"
+    "dgrid": "~1.1.0",
+    "agrc": "agrc-widgets#~5.0.0",
+    "ijit": "agrc-ijit#~3.1.3",
+    "Proj4Leaflet": "proj4leaflet#~0.7.2",
+    "esri-leaflet": "~1.0.4"
+  },
+  "resolutions": {
+    "dgrid": "~1.1.0",
+    "proj4": "~2.1.2"
   }
 }
