--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "agrc": "agrc-widgets#~5.0.0",
     "ijit": "agrc-ijit#~3.1.3",
     "Proj4Leaflet": "proj4leaflet#~0.7.2",
-    "esri-leaflet": "~1.0.4"
+    "esri-leaflet": "~1.0.4",
+    "stubmodule": "^0.6"
   },
   "resolutions": {
     "dgrid": "~1.1.0",
