GridDropdown focus working with dgrid

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "dojo": "~1.11.2",
     "dijit": "~1.11.2",
     "leaflet": "~0.7.7",
-    "bootstrap-combobox": "~1.1.7",
+    "bootstrap-combobox": "https://github.com/stdavis/bootstrap-combobox.git#focus-on-hide",
     "bootstrap3-typeahead": "~4.0.1",
     "proj4": "~2.3.14",
     "util": "dojo-util#~1.11.2",
