--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "electrofishing",
-  "version": "1.0.0",
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-jasmine": "^1.0.3",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^19.0.0",
-    "intern": "^3.2.0",
-    "load-grunt-tasks": "^3.5.2"
-  }
+    "name": "electrofishing",
+    "version": "1.0.0",
+    "devDependencies": {
+        "grunt": "^1.0.1",
+        "grunt-contrib-connect": "^1.0.2",
+        "grunt-contrib-jasmine": "^1.0.3",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-eslint": "^19.0.0",
+        "intern": "^3.2.0",
+        "load-grunt-tasks": "^3.5.2"
+    },
+    "scripts": {
+        "test": "grunt travis -v"
+    }
 }
