--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
         "load-grunt-tasks": "^3.5.2"
     },
     "scripts": {
-        "test": "grunt travis -v"
+        "test": "grunt travis"
     }
 }
