--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,11 @@
   },
   "resolutions": {
     "dgrid": "~1.1.0",
-    "proj4": "~2.1.2"
+    "proj4": "~2.1.2",
+    "dojo": "~1.11.2",
+    "dijit": "~1.11.2",
+    "util": "~1.11.2",
+    "dojox": "1.11.2",
+    "xstyle": "~0.2.1"
   }
 }
