--- a/bower.json
+++ b/bower.json
@@ -11,18 +11,18 @@
   "private": true,
   "version": "1.1.0",
   "dependencies": {
-    "bootstrap": "~3.3.6",
+    "bootstrap": "3.3.6",
     "dojo": "~1.11.2",
     "dijit": "~1.11.2",
-    "leaflet": "~0.7.7",
+    "leaflet": "~1.0.1",
     "bootstrap-combobox": "https://github.com/stdavis/bootstrap-combobox.git#focus-on-hide",
     "proj4": "~2.3.14",
     "util": "dojo-util#~1.11.2",
     "dgrid": "~1.1.0",
     "agrc": "agrc-widgets#~5.0.0",
     "ijit": "agrc-ijit#~3.1.3",
-    "Proj4Leaflet": "proj4leaflet#~0.7.2",
-    "esri-leaflet": "~1.0.4",
+    "Proj4Leaflet": "proj4leaflet#1.0.0-beta.2",
+    "esri-leaflet": "~2.0.3",
     "stubmodule": "^0.6"
   },
   "resolutions": {
@@ -30,8 +30,7 @@
     "proj4": "~2.1.2",
     "dojo": "~1.11.2",
     "dijit": "~1.11.2",
-    "util": "~1.11.2",
-    "dojox": "1.11.2",
-    "xstyle": "~0.2.1"
+    "leaflet": "~1.0.1",
+    "Proj4Leaflet": "1.0.0-beta.2"
   }
 }
