--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "Proj4Leaflet": "proj4leaflet#1.0.0-beta.2",
     "esri-leaflet": "~2.0.3",
     "stubmodule": "^0.6",
-    "localforage": "~1.4.3"
+    "localforage": "~1.4.3",
+    "toaster": "agrc-toaster#~1.0.1"
   },
   "resolutions": {
     "dgrid": "~1.1.0",
