--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ src/jasmine-jsreporter/
 src/jquery
 src/ladda-bootstrap/
 src/leaflet
+src/localforage/
 src/moment/
 src/mustache/
 src/proj4
@@ -36,5 +37,6 @@ src/secrets.json
 src/spin.js/
 src/spinjs/
 src/stubmodule/
+src/toaster/
 src/util
 src/xstyle/
