--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "electrofishing",
   "version": "1.2.0",
   "devDependencies": {
+    "eslint": "^3.9.1",
+    "eslint-plugin-html": "^1.6.0",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^1.0.0",
