--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "bootstrap": "3.3.6",
     "dojo": "~1.11.2",
     "dijit": "~1.11.2",
-    "leaflet": "~1.0.1",
+    "leaflet": "1.0.2",
     "bootstrap-combobox": "https://github.com/stdavis/bootstrap-combobox.git#focus-on-hide",
     "proj4": "~2.3.14",
     "util": "dojo-util#~1.11.2",
@@ -22,7 +22,7 @@
     "agrc": "agrc-widgets#~5.0.0",
     "ijit": "agrc-ijit#~3.1.3",
     "Proj4Leaflet": "proj4leaflet#1.0.0-beta.2",
-    "esri-leaflet": "~2.0.3",
+    "esri-leaflet": "2.0.7",
     "stubmodule": "^0.6",
     "localforage": "~1.4.3",
     "toaster": "agrc-toaster#~1.0.1",
@@ -33,7 +33,7 @@
     "proj4": "~2.1.2",
     "dojo": "~1.11.2",
     "dijit": "~1.11.2",
-    "leaflet": "~1.0.1",
+    "leaflet": "~1.0.2",
     "Proj4Leaflet": "1.0.0-beta.2"
   }
 }
