--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "electrofishing",
   "version": "1.4.1",
   "devDependencies": {
-    "eslint": "^3.9.1",
-    "eslint-plugin-html": "^1.6.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-html": "^4.0.3",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-jasmine": "^1.1.0",
     "grunt-contrib-stylus": "^1.2.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "1.0.1",
     "grunt-dojo": "^1.1.2",
-    "grunt-eslint": "^19.0.0",
+    "grunt-eslint": "^20.1.0",
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.1",
     "grunt-ssh": "^0.12.9",
