--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.4.1",
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-html": "^4.0.3",
+    "eslint-config-agrc": "1.2.0",
+    "eslint-plugin-html": "4.0.3",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -11,7 +12,7 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-jasmine": "^1.1.0",
+    "grunt-contrib-jasmine": "1.2.0",
     "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "1.0.1",
