--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-    - "6.9"
+    - "lts/*"
 before_install:
     - npm install -g grunt-cli
     - npm install -g bower
