--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "stubmodule": "^0.6",
     "localforage": "~1.4.3",
     "toaster": "agrc-toaster#~1.0.1",
-    "handlebars": "~4.0.5"
+    "handlebars": "~4.0.5",
+    "papaparse": "^4.4.0"
   },
   "resolutions": {
     "dgrid": "~1.1.0",
