--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-core": "6.26.3",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-latest": "6.24.1",
+    "es6-object-assign": "1.1.0",
     "eslint": "^4.19.1",
     "eslint-config-agrc": "1.2.0",
     "eslint-plugin-html": "4.0.3",
