Upgrade permissions on travis to help with Chrome Headless
https://github.com/travis-ci/travis-ci/issues/8836

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ notifications:
     email:
         on_success: change
         on_failure: change
-sudo: false
+sudo: required
+addons:
+  chrome: stable
