--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "grunt-contrib-watch": "1.0.1",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^20.1.0",
+    "grunt-exec": "3.0.0",
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.1",
     "grunt-ssh": "^0.12.9",
-    "load-grunt-tasks": "^3.5.2"
+    "jasmine": "3.1.0",
+    "load-grunt-tasks": "^3.5.2",
+    "puppeteer": "1.4.0"
   },
   "scripts": {
     "test": "grunt travis"
