chore: spell checker updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
   "cSpell.words": [
+    "BWID",
+    "HEMATOCRIT",
+    "LEUKOCRIT",
+    "MOREINFO",
+    "PLPRO",
+    "PSBR",
     "UDWR",
+    "WWID",
     "coord",
     "mapinited",
     "moveend",
