fix: catch up on fixing unit tests and spelling fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,10 @@
     "PSBR",
     "UDWR",
     "WWID",
+    "clrk",
     "coord",
+    "ellps",
+    "latlng",
     "mapinited",
     "moveend",
     "unproject",
