--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "electrofishing",
   "version": "1.9.5",
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-modules-amd": "^7.12.1",
     "babel-core": "6.26.3",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-preset-latest": "6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react-app": "^10.0.0",
     "es6-object-assign": "1.1.0",
     "eslint": "^4.19.1",
     "eslint-config-agrc": "1.2.0",
     "eslint-plugin-html": "4.0.3",
     "grunt": "^1.0.1",
-    "grunt-babel": "7.0.0",
+    "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.3.0",
@@ -32,6 +36,13 @@
     "puppeteer": "1.13.0"
   },
   "scripts": {
-    "test": "grunt travis"
+    "start": "export BABEL_ENV=development && npx babel --watch --out-dir src/react-app _src/react-app & grunt",
+    "build": "export BABEL_ENV=production && npm run babel-react && grunt build-prod",
+    "build-stage": "export BABEL_ENV=test && npm run babel-react && grunt build-stage",
+    "babel-react": "npx babel --out-dir src/react-app _src/react-app",
+    "test": "grunt travis",
+    "deploy": "grunt deploy-prod",
+    "deploy-stage": "grunt deploy-stage",
+    "deploy-stage-app-only": "grunt deploy-stage-app-only"
   }
 }
