--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["react-app"],
-  "plugins": ["@babel/plugin-transform-modules-amd"]
+  "plugins": [
+    "@babel/plugin-transform-modules-amd",
+    "@babel/plugin-transform-parameters",
+    "@babel/plugin-transform-destructuring"
+  ]
 }
