fix: allow for importing amd modules into react modules

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@babel/plugin-transform-destructuring": "^7.12.1",
     "@babel/plugin-transform-modules-amd": "^7.12.1",
     "@babel/plugin-transform-parameters": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "babel-core": "6.26.3",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-latest": "^6.24.1",
-    "babel-preset-react-app": "^10.0.0",
     "es6-object-assign": "1.1.0",
     "eslint": "^4.19.1",
     "eslint-config-agrc": "1.2.0",
