--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "deploy-stage": "grunt deploy-stage",
     "deploy-stage-app-only": "grunt deploy-stage-app-only",
     "storybook": "start-storybook -p 6006 --no-dll"
+  },
+  "dependencies": {
+    "pubsub-js": "^1.9.0"
   }
 }
