--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "test": "npm run babel-react && grunt travis"
   },
   "dependencies": {
-    "pubsub-js": "^1.9.0"
-  }
+    "pubsub-js": "^1.9.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
 }
