--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pubsub-js": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-toastify": "^6.1.0"
   },
   "browserslist": [
     ">0.2%",
