--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "sass": "sass _src/react-app:src/react-app",
     "start": "npm run babel-deps && sass _src/react-app:src/react-app --watch & npm run babel-react-watch & grunt",
     "storybook": "start-storybook -p 6006 --no-dll",
-    "test": "npm run babel-react && grunt travis"
+    "test": "npm run babel-deps && npm run babel-react && grunt travis"
   },
   "dependencies": {
     "pubsub-js": "^1.9.0",
