chore: convert e2e jasmine/puppeteer tests to cypress
Closes #225

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,9 +14,12 @@
     "coord",
     "ellps",
     "fishsample",
+    "geodef",
     "latlng",
     "mapinited",
     "moveend",
+    "scroller",
+    "testid",
     "toastify",
     "unproject",
     "zoomend"
