--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": [
         "agrc",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:cypress/recommended"
     ],
     "rules": {
         "no-magic-numbers": "off",
