wip: switch to top-down approach for converting to react components

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/plugin-transform-modules-amd",
     "@babel/plugin-transform-parameters",
     "@babel/plugin-transform-destructuring",
-    "transform-node-env-inline"
+    "transform-inline-environment-variables",
+    ["inline-json-import", {}]
   ]
 }
