--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@storybook/react": "^6.0.28",
     "babel-core": "6.26.3",
     "babel-loader": "^8.1.0",
-    "babel-plugin-transform-node-env-inline": "^0.4.3",
+    "babel-plugin-inline-json-import": "^0.3.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
@@ -55,10 +56,10 @@
   },
   "scripts": {
     "babel-deps": "bash ./build_deps.sh",
-    "babel-react-watch": "export BABEL_ENV=development && babel --watch --out-dir src/react-app _src/react-app",
+    "babel-react-watch": "export REACT_APP_BUILD=development && export BABEL_ENV=development && babel --watch --out-dir src/react-app _src/react-app",
     "babel-react": "babel --out-dir src/react-app _src/react-app",
-    "build-stage": "export BABEL_ENV=test && npm run babel-deps && npm run sass && npm run babel-react && grunt build-stage",
-    "build": "export BABEL_ENV=production && npm run babel-deps && npm run sass && npm run babel-react && grunt build-prod",
+    "build-stage": "export REACT_APP_BUILD=stage && export BABEL_ENV=test && npm run babel-deps && npm run sass && npm run babel-react && grunt build-stage",
+    "build": "export REACT_APP_BUILD=prod && export BABEL_ENV=production && npm run babel-deps && npm run sass && npm run babel-react && grunt build-prod",
     "cypress:run": "start-server-and-test 'npm start' http://localhost:8000 'cypress run'",
     "cypress:open": "concurrently \"npm start\" \"cypress open\"",
     "deploy-stage-app-only": "grunt deploy-stage-app-only",
@@ -66,14 +67,19 @@
     "deploy": "grunt deploy-prod",
     "sass": "sass _src/react-app:src/react-app",
     "start": "npm run babel-deps && sass _src/react-app:src/react-app --watch & npm run babel-react-watch & grunt",
-    "storybook": "start-storybook -p 6006 --no-dll",
+    "storybook": "start-storybook -p 6006 --no-dll -s ./src",
     "test": "npm run babel-deps && npm run babel-react && grunt travis && npm run cypress:run"
   },
   "dependencies": {
+    "esri-leaflet": "^2.3.0",
+    "immer": "^8.0.1",
+    "leaflet": "^1.5.1",
+    "localforage": "^1.9.0",
     "pubsub-js": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-toastify": "^6.1.0"
+    "react-toastify": "^6.1.0",
+    "uuid": "^8.3.1"
   },
   "browserslist": [
     ">0.2%",
