--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.3",
     "cypress": "^5.6.0",
     "cypress-plugin-tab": "^1.0.5",
     "dojo-webpack-plugin": "^2.8.18",
@@ -82,9 +82,6 @@
     "uuid": "^8.3.1"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "last 2 versions and > 2%"
   ]
 }
