tools: implement prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,13 @@
     "unproject",
     "zoomend"
   ],
-  "python.pythonPath": "/usr/local/opt/python/libexec/bin/python"
+  "editor.formatOnSave": true,
+  "editor.rulers": [
+    120
+  ],
+  "eslint.format.enable": false,
+  "prettier.enable": true,
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
