--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "PSBR",
     "UDWR",
     "WWID",
+    "autoheight",
     "clrk",
     "coord",
     "ellps",
@@ -17,6 +18,7 @@
     "geodef",
     "immer",
     "latlng",
+    "latlngs",
     "mapinited",
     "moveend",
     "scroller",
