--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-toastify": "^6.1.0",
+    "use-immer": "^0.4.2",
     "uuid": "^8.3.1"
   },
   "browserslist": [
