feat: implement ComboBox to replace old jquery plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "WWID",
     "autoheight",
     "clrk",
+    "comobobox",
     "coord",
     "ellps",
     "fishsample",
@@ -22,6 +23,8 @@
     "mapinited",
     "moveend",
     "scroller",
+    "startdistdir",
+    "startend",
     "testid",
     "toastify",
     "unproject",
