--- a/package.json
+++ b/package.json
@@ -83,11 +83,12 @@
     "downshift": "^6.1.0",
     "esri-leaflet": "^2.3.0",
     "immer": "^8.0.1",
-    "leaflet": "^1.5.1",
+    "leaflet": "^1.7.1",
     "localforage": "^1.9.0",
     "pubsub-js": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-toastify": "^6.1.0",
     "use-immer": "^0.4.2",
     "uuid": "^8.3.1"
