--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/react": "^6.1.20",
+    "@testing-library/cypress": "^7.0.4",
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -22,7 +23,7 @@
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.8.3",
-    "cypress": "^5.6.0",
+    "cypress": "^6.6.0",
     "cypress-plugin-tab": "^1.0.5",
     "dojo-webpack-plugin": "^2.8.18",
     "es6-object-assign": "1.1.0",
