--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-leaflet": "^3.1.0",
     "react-toastify": "^6.1.0",
     "use-immer": "^0.4.2",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -77,6 +77,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-json-import": "^0.3.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-latest": "^6.24.1",
     "concurrently": "^5.3.0",
