--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,38 @@
 {
   "cSpell.words": [
-    "BWID",
-    "Combobox",
-    "HEMATOCRIT",
-    "LEUKOCRIT",
-    "MOREINFO",
-    "Msgs",
-    "PLPRO",
-    "PSBR",
-    "Segs",
-    "UDWR",
-    "WWID",
     "autoheight",
+    "BWID",
     "clrk",
+    "Combobox",
     "comobobox",
     "coord",
     "deps",
+    "dijkstras",
     "ellps",
     "fishsample",
     "flowtype",
     "geodef",
+    "HEMATOCRIT",
+    "Heyman",
     "immer",
     "latlng",
     "latlngs",
+    "LEUKOCRIT",
     "mapinited",
+    "MOREINFO",
     "moveend",
+    "Msgs",
+    "PLPRO",
+    "PSBR",
     "scroller",
+    "Segs",
     "startdistdir",
     "startend",
     "testid",
     "toastify",
+    "UDWR",
     "unproject",
+    "WWID",
     "zoomend"
   ],
   "editor.formatOnSave": true,
@@ -42,4 +44,5 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "python.formatting.provider": "yapf",
 }
