--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/react": "^6.1.20",
-    "@testing-library/cypress": "^7.0.4",
+    "@testing-library/cypress": "^8.0.2",
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -98,7 +98,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.1",
-    "grunt": "^1.3.0",
+    "grunt": "^1.5.2",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -108,7 +108,7 @@
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-stylus": "^1.2.0",
-    "grunt-contrib-uglify-es": "^3.3.0",
+    "grunt-contrib-uglify": "^5.2.1",
     "grunt-contrib-watch": "1.0.1",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^23.0.0",
