--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,23 @@
 {
   "cSpell.words": [
     "autoheight",
+    "autoplay",
     "BWID",
     "clrk",
     "Combobox",
     "comobobox",
     "coord",
+    "DATABASESCHEMA",
     "deps",
     "dijkstras",
     "ellps",
     "fishsample",
     "flowtype",
+    "fullscreen",
     "geodef",
     "HEMATOCRIT",
     "Heyman",
+    "hostingchannels",
     "immer",
     "latlng",
     "latlngs",
@@ -22,8 +26,10 @@
     "MOREINFO",
     "moveend",
     "Msgs",
+    "nosniff",
     "PLPRO",
     "PSBR",
+    "SAMEORIGIN",
     "scroller",
     "Segs",
     "startdistdir",
@@ -32,7 +38,9 @@
     "toastify",
     "UDWR",
     "unproject",
+    "WILDADMIN",
     "WWID",
+    "yada",
     "zoomend"
   ],
   "editor.formatOnSave": true,
