feat(ci): upload cypress screenshots and videos at action artifacts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,21 @@ jobs:
         with:
           build: npm run babel-deps && npm run babel-react
           start: npm start
+
+      - name: Upload Cypress Screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+
+      - name: Upload Cypress Videos
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+
   test:
     runs-on: ubuntu-latest
     steps:
