fix(ci): add missing secrets file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,6 +112,7 @@ jobs:
         run: |
           npm ci
           npm install -g grunt-cli
+          echo "{\"quadWord\": \"${{ secrets.QUAD_WORD }} \"}" > ./_src/react-app/secrets.json
 
       - name: 🏗 Run build script
         run: npm run build-stage
@@ -164,6 +165,7 @@ jobs:
         run: |
           npm ci
           npm install -g grunt-cli
+          echo "{\"quadWord\": \"${{ secrets.QUAD_WORD }} \"}" > ./_src/react-app/secrets.json
 
       - name: 🏗 Run build script
         run: npm run build
