--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-core": "6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-inline-json-import": "^0.3.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
