--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,7 @@ jobs:
         uses: cypress-io/github-action@v3
         with:
           env: REACT_APP_QUAD_WORD=test
-          build: |
-            npm run babel-deps
-            npm run babel-react
+          build: npm run babel-deps && npm run babel-react
           start: npm start
 
       - name: Upload Cypress Screenshots
