--- a/_src/app/package.json
+++ b/_src/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "app",
-    "version": "2.0.0-2",
+    "version": "2.0.0",
     "main": "main",
     "description": "electrofishing",
     "homepage": "https://github.com/agrc/electrofishing",
