chore(ci): add firebase default rewrites

--- a/firebase.json
+++ b/firebase.json
@@ -69,5 +69,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }
   ]
 }
